--- a/chat/index.css
+++ b/chat/index.css
@@ -1,8 +1,26 @@
 #message_box {
     margin: 10px 0;
     display: flex;
+    flex-direction: column;
+}
+
+#memberAndMessages {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     height: 600px;
     width: 700px;
     flex-direction: column;
     border: 1px solid rgb(255, 155, 0);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.memberList {
+    display: block;
+    flex-direction: column;
+    width: 30%;
+    height: max-content;
 }
