--- a/public/mainPage/mainPage.css
+++ b/public/mainPage/mainPage.css
@@ -23,6 +23,7 @@ nav div{
     justify-content: center;
     align-items: center;
     width: 30vw;
+    max-width: 200px;
     height: 500px;
     margin-right: 20px;
     border: 1px solid black;
@@ -37,7 +38,7 @@ nav div{
 }
 
 .project-area{
-    width: 60vw;
+    width: 80vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -47,10 +48,19 @@ nav div{
 }
 .project{
     margin-right: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 90%;
+    width: 150px;
+    text-align: center;
+    padding-top: 50px;
+    box-sizing: border-box;
+    cursor: pointer;
+
 }
 
 #new-project{
-    height: 100%;
+    height: 90%;
     border: 1px solid black;
     border-radius: 5px;
 }
