--- a/chat/index.css
+++ b/chat/index.css
@@ -78,7 +78,6 @@ body {
     flex-direction: column;
     width: 75%;
     height: auto;
-    overflow-y: auto;
 }
 
 #message-box {
@@ -89,7 +88,15 @@ body {
     height: 95%;
     padding: 5px 5px 0 5px;
     margin-bottom: 10px;
+    overflow-y: scroll;
 }
+
+#message-box::-webkit-scrollbar {
+    display: none;
+  }
+
+
+
 
 #message-box>.displayCreatedDate {
     display: flex;
