cm-chatroom+edit-message+member-list+socketIO

--- a/chat/index.css
+++ b/chat/index.css
@@ -1,4 +1,13 @@
 body {
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
+
+
+body {
     background-color: rgb(34, 91, 138);
 }
 
@@ -19,7 +28,7 @@ body {
     padding: 10px;
 }
 
-#member-list {
+#member-area {
     background-color: rgb(56, 141, 211);
     padding: 10px;
     display: flex;
@@ -30,11 +39,16 @@ body {
     border-radius: 20px;
 }
 
-#member-list>.list-title {
+#member-area>.list-title {
     display: flex;
     justify-content: center;
     font-size: 30px;
     margin: 10px 0;
+}
+
+#member-list {
+    display: flex;
+    flex-direction: column;
 }
 
 #member-list>.member {
@@ -71,7 +85,7 @@ body {
     width: auto; */
 }
 
-#messageList {
+#message-list {
     /* background-color: rgb(127, 197, 255); */
     padding: 10px;
     display: flex;
@@ -93,7 +107,7 @@ body {
 
 #message-box::-webkit-scrollbar {
     display: none;
-  }
+}
 
 
 
@@ -142,11 +156,23 @@ body {
 .message>.create-time,
 .myMessage>.create-time {
     font-size: 10px;
+    margin-right: 5px;
 }
 
-/* .myMessage > .create-time {
+.message>.edited,
+.myMessage>.edited {
     font-size: 10px;
-} */
+    margin-right: 5px;
+}
+
+.myMessage>.edit-content {
+    font-size: 9px;
+    background-color: rgb(70, 70, 70);
+    color: white;
+    border: none;
+    padding: 2px 5px;
+    cursor: pointer;
+}
 
 #texting-box {
     display: flex;
@@ -162,6 +188,8 @@ body {
     width: 100%;
 }
 
-#text-content {
+
+
+.text-content {
     width: calc(100% - 70px);
 }
