--- a/public/index.css
+++ b/public/index.css
@@ -11,3 +11,10 @@
     max-width: 150px;
     margin: auto;
 }
+
+.social-login-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 150px;
+    margin: auto;
+}
