cm mainpage full backend

--- a/public/mainPage/index.css
+++ b/public/mainPage/index.css
@@ -1,35 +1,39 @@
+body {
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
+
+.white-word {
+    color: rgb(250, 250, 250);
+}
+
 .row {
     --bs-gutter-x: 0;
 }
 
-/* background-color: #4158D0;
-background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%); */
-/* background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(176,229,208,1) 42%, rgba(92,202,238,0.41) 93.6% ); */
-/* background-image: linear-gradient( 2.1deg,  rgba(116,253,210,1) 5%, rgba(0,191,247,1) 95.8% ); */
-
 #main-page-background {
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(to top left, #f3f3f3 15%, rgba(255, 153, 150, 0) 60%, #80D0C7), linear-gradient(to top right, #92d4ff, rgba(255, 153, 150, 0), #76bfb8) #85bffa;
+    background-color: rgb(200, 215, 214);
+    /* background: linear-gradient(to top left, #f3f3f3 15%, rgba(255, 153, 150, 0) 60%, #80D0C7), linear-gradient(to top right, #92d4ff, rgba(255, 153, 150, 0), #76bfb8) #85bffa; */
     overflow: hidden;
 }
 
 #main-page-area {
-    background-color: rgb(255, 255, 255, 0.85);
+    
     display: flex;
     flex-direction: column;
     height: 85%;
     width: 90%;
     min-width: 800px;
-    border: .5px solid rgb(215, 215, 215);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border-radius: 35px;
-    padding: 20px;
-    overflow: hidden;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    
 }
 
 
@@ -43,11 +47,12 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(124, 124, 124);
-    border: .5px solid rgb(215, 215, 215);
-    border-radius: 15px;
+    background-color: rgb(45, 45, 45);
+    /* border: .5px solid rgb(215, 215, 215); */
+    border-radius: 30px;
     padding: 0 15px;
     margin-bottom: 20px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 
@@ -58,6 +63,13 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     display: flex;
     flex-direction: row;
     height: 100%;
+
+    background-color: rgb(255, 255, 255, 0.85);
+    border: .5px solid rgb(215, 215, 215);
+    border-radius: 30px;
+    padding: 15px 0;
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 
@@ -69,13 +81,38 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     flex-direction: column;
     border-right: 1px solid rgb(124, 124, 124);
     /* border-radius: 15px; */
-    padding-right: 15px;
+    padding: 0 15px;
     justify-content: space-between;
     max-height: auto;
+    min-width: 250px;
+    max-width: 250px;
 }
 
 .personal-area img {
     max-width: 100%;
+}
+
+.user-content .image-cropper {
+    margin-left: 10px;
+    width: 200px;
+    height: 200px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.image-cropper>img {
+    min-height: 200px;
+    min-width: 200px;
+    object-fit: cover;
+    display: inline;
+    margin: auto;
+    height: auto;
+    width: 100%;
+    cursor: pointer;
+    margin-bottom: 15px;
+    /* height: 100%;
+    width: auto; */
 }
 
 
@@ -85,11 +122,12 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 .project-area {
     /* display: flex;
     flex-direction: row; */
-    padding: 0 20px;
-    columns: 3;
+    padding: 0 15px;
+    columns: 4;
     column-gap: 20px;
     break-inside: avoid;
     overflow: auto;
+    width: calc(100% - 500px);
 }
 
 
@@ -145,6 +183,9 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     border-left: 1px solid rgb(124,124, 124);
     padding-left: 15px;
     overflow: auto;
+    min-width: 250px;
+    max-width: 250px;
+    padding: 0 15px;
 }
 
 .completed-project {
