--- a/public/mainPage/index.css
+++ b/public/mainPage/index.css
@@ -141,6 +141,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    align-content: center;
+    justify-content: center;
     font-weight: 600;
     background-color: rgb(184, 211, 210);
     border: .5px solid rgb(215, 215, 215);
@@ -160,7 +162,8 @@ body {
 }
 
 .center-image img {
-    max-width: 100%;
+    /* max-width: 100%; */
+    max-height: 150px
 }
 
 .project {
@@ -172,6 +175,15 @@ body {
     border-radius: 15px;
     padding: 15px;
     margin-bottom: 10px;
+}
+
+.project-name {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    flex-wrap: wrap;
+    font-weight: 600;
+    font-size: 20px;
 }
 
 .project img {
