--- a/public/ProjectPage/index.css
+++ b/public/ProjectPage/index.css
@@ -11,7 +11,6 @@ nav div{
 }
 
 .container{
-
     margin-top: 30px;
     display: flex;
     padding: 20px;
@@ -59,4 +58,32 @@ nav div{
     font-size: 25px;
     display: flex;
     padding-left: 10px;
+    width: 190px;
+    display: flex;
+    position: relative;
+}
+
+h4{
+    padding-left: 20px;
+}
+
+.task-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.finish-btn{
+    margin: 10px 10px 0 0;
+    height: 30px;
+}
+
+.profile-pic{
+    position: absolute;
+    right: 10px;
+    height: 30px;
+    border-radius: 50%;
+    width: 30px;
+}
+.task-name{
+    font-size: 20px;
 }
