--- a/public/mainPage/index.css
+++ b/public/mainPage/index.css
@@ -107,7 +107,7 @@ body {
     border-radius: 50%;
 }
 
-.image-cropper>img {
+.image-cropper>img{
     min-height: 200px;
     min-width: 200px;
     object-fit: cover;
@@ -121,9 +121,19 @@ body {
     width: auto; */
 }
 
-
-
-
+.image-cropper>svg{
+    min-height: 200px;
+    min-width: 200px;
+    object-fit: cover;
+    display: inline;
+    margin: auto;
+    height: auto;
+    width: 100%;
+    cursor: pointer;
+    margin-bottom: 15px;
+    /* height: 100%;
+    width: auto; */
+}
 
 .project-area {
     /* display: flex;
