--- a/public/chatPage/index.css
+++ b/public/chatPage/index.css
@@ -1,18 +1,24 @@
 body {
-    font-family: "DM Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-}
-
-
-
-body {
-    background-color: rgb(34, 91, 138);
+    background-color: rgb(200, 215, 214) !important;
 }
 
 .white-word {
     color: rgb(250, 250, 250);
+}
+
+.chatroom-box {
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 60%;
+    width: 55%;
+    min-width: 600px;
 }
 
 #memberAndMessages {
@@ -20,27 +26,23 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    height: 60%;
-    width: 55%;
-    min-width: 600px;
     border: .5px solid rgb(215, 215, 215);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 100%;
+    width: 100%;
     border-radius: 30px;
-    padding: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 #member-area {
-    background-color: rgb(56, 141, 211);
+    background-color: #b8d3d2;
+    margin: 15px;
     padding: 10px;
     display: flex;
     flex-direction: column;
     width: 25%;
     min-width: 150px;
     height: auto;
-    border-radius: 20px;
+    border-radius: 15px;
 }
 
 #member-area>.list-title {
@@ -67,6 +69,7 @@ body {
 
 .member>.username {
     font-size: 18px;
+    font-weight: 600px;
     cursor: pointer;
 }
 
@@ -92,9 +95,14 @@ body {
     width: auto; */
 }
 
+
+
+
+
 #message-list {
     /* background-color: rgb(127, 197, 255); */
-    padding: 10px;
+    /* padding: 10px; */
+    margin: 15px 15px 15px 0;
     display: flex;
     flex-direction: column;
     width: 75%;
@@ -109,7 +117,7 @@ body {
     height: 95%;
     padding: 5px 5px 0 5px;
     margin-bottom: 10px;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 #message-box::-webkit-scrollbar {
@@ -126,9 +134,15 @@ body {
 }
 
 #message-box>.displayCreatedDate>div {
-    background-color: rgb(190, 190, 190);
-    font-size: 10px;
-    padding: 3px;
+    background-color: #f0f0f0;
+    color: #9f9f9f;
+    border-radius: 9px;
+    font-size: 9px;
+    padding: 3px 6px;
+
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #message-box>.message {
@@ -156,12 +170,20 @@ body {
 }
 
 .message>.content {
+    padding: 0 10px;
+    border-radius: 10px 10px 10px 2px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 3px -1px, rgba(0, 0, 0, 0.06) 0px 1px 3px -1px;
+    background-color: #f1f1f1;
     color: #232323;
     margin-right: 5px;
 }
 
 .myMessage>.content {
-    color: #0555c8;
+    padding: 0 10px;
+    border-radius: 10px 10px 2px 10px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 3px -1px, rgba(0, 0, 0, 0.06) 0px 1px 3px -1px;
+    background-color: #a1d9d7;
+    color: #ffffff;
     margin-right: 5px;
 }
 
@@ -206,4 +228,11 @@ body {
 
 #text-send {
     cursor: pointer;
+}
+
+#quit-chat {
+    position: absolute;
+    bottom: -50px;
+    left: 50%;
+    transform: translate(-50%);
 }
