--- a/public/chatPage/index.css
+++ b/public/chatPage/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(200, 215, 214) !important;
+    background-color: #c8d7d6 !important;
 }
 
 .white-word {
@@ -51,6 +51,10 @@ body {
     font-size: 28px;
     margin: 10px 0;
     font-weight: 600;
+
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #member-list {
@@ -73,10 +77,16 @@ body {
     cursor: pointer;
 }
 
+.member>.username:hover {
+    /* transform: scale(1.1); */
+    /* filter: brightness(5) saturate(0.8); */
+    filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.5)); 
+  }
+
 .member>.image-cropper {
     margin-left: 10px;
-    width: 40px;
     height: 40px;
+    width: 40px;
     position: relative;
     overflow: hidden;
     border-radius: 50%;
@@ -93,6 +103,32 @@ body {
     cursor: pointer;
     /* height: 100%;
     width: auto; */
+}
+
+.image-cropper:hover {
+    /* transform: scale(1.1); */
+    filter: brightness(1.2) saturate(0.8);
+  }
+
+@media screen and (max-width: 1350px) {
+    #member-area>.list-title {
+        font-size: 22px;
+    }
+
+    .member>.username {
+        font-size: 14px;
+    }
+
+    .member>.image-cropper {
+        height: 30px;
+        width: 30px;
+    }
+
+    .image-cropper>img {
+        min-height: 30px;
+        min-width: 30px;
+    }
+
 }
 
 
@@ -138,7 +174,7 @@ body {
     color: #9f9f9f;
     border-radius: 9px;
     font-size: 9px;
-    padding: 3px 6px;
+    padding: 3px 9px;
 
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -149,8 +185,8 @@ body {
     display: flex;
     flex-direction: row;
     align-items: baseline;
-    margin-bottom: 3px;
-    font-size: 15px;
+    margin-bottom: 5px;
+    font-size: 14px;
 }
 
 #message-box>.myMessage {
@@ -158,28 +194,30 @@ body {
     flex-direction: row;
     justify-content: flex-end;
     align-items: baseline;
-    margin-bottom: 3px;
-    font-size: 15px;
+    margin-bottom: 5px;
+    font-size: 14px;
 }
 
 .message>.username,
 .myMessage>.username {
-    color: #8a2be2;
+    color: #66b1ae;
     margin-right: 5px;
     font-weight: 600;
 }
 
 .message>.content {
-    padding: 0 10px;
-    border-radius: 10px 10px 10px 2px;
+    padding: 2px 10px 2px 20px;
+    border-radius: 13px 13px 13px 2px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 3px -1px, rgba(0, 0, 0, 0.06) 0px 1px 3px -1px;
     background-color: #f1f1f1;
-    color: #232323;
+    color: #4d6e6d;
+    /* background-color: #454545;
+    color: #ffffff; */
     margin-right: 5px;
 }
 
 .myMessage>.content {
-    padding: 0 10px;
+    padding: 2px 20px 2px 10px;
     border-radius: 10px 10px 2px 10px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 3px -1px, rgba(0, 0, 0, 0.06) 0px 1px 3px -1px;
     background-color: #a1d9d7;
@@ -189,50 +227,114 @@ body {
 
 .message>.create-time,
 .myMessage>.create-time {
+    color: #4d6e6d;
     font-size: 10px;
     margin-right: 5px;
+
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .message>.edited,
 .myMessage>.edited {
+    color: #4d6e6d;
     font-size: 10px;
     margin-right: 5px;
+
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .myMessage>.edit-content {
-    font-size: 9px;
-    background-color: rgb(70, 70, 70);
-    color: white;
+    background: none;
     border: none;
     padding: 2px 5px;
     cursor: pointer;
 }
 
+.myMessage>.edit-content:hover {
+    filter: brightness(0) saturate(100%) invert(37%) sepia(17%) saturate(692%) hue-rotate(129deg) brightness(100%) contrast(80%);
+}
+
+.edit-content img {
+    max-height: 12px;
+    max-width: 12px;
+    filter: brightness(0) saturate(100%) invert(98%) sepia(13%) saturate(475%) hue-rotate(151deg) brightness(90%) contrast(85%);
+}
+
 #texting-box {
     display: flex;
     flex-direction: row;
-    padding: 0 5px;
+    height: 40px;
+    /* padding: 0 5px; */
 }
 
 #sendMessage {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    align-items: center;
+    background-color: #2d2d2d;
+    border-radius: 15px;
+    height: 40px;
+    /* padding: 0 15px; */
     justify-content: space-between;
     width: 100%;
 }
 
 .text-content {
-    width: calc(100% - 70px);
+    width: calc(100% - 85px);
+    height: 30px;
+    border-radius: 5px;
+    /* border: NONE !important; */
+    border: .3px solid #343434;
+    background-color: #3e3e3e;
+    font-size: 15px;
+    margin-left: 15px;
 }
 
 #text-send {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
+    /* border: .5px solid #c1c1c1; */
+    border: none !important;
+    background-color: #2d2d2d;
+    color: #c1c1c1;
+    border-radius: 10px;
+    margin-right: 5px;
+    width: 60px;
+    height: 30px;
+}
+
+#text-send:hover {
+    /* background-color: #8fd1cf; */
+    border: .5px solid #8fd1cf !important;
+    color: #8fd1cf;
 }
 
 #quit-chat {
     position: absolute;
-    bottom: -50px;
+    bottom: -60px;
     left: 50%;
     transform: translate(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: #c1c1c1;
+    background-color: #2d2d2d;
+    border: none !important;
+    border-radius: 30px;
+    font-size: 15px;
+    width: 100px;
+    height: 40px;
+    opacity: 0.8;
 }
+
+#quit-chat:hover {
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
+  }
