--- a/public/mainPage/index.css
+++ b/public/mainPage/index.css
@@ -47,7 +47,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(45, 45, 45);
+    background-color: #2d2d2d;
     /* border: .5px solid rgb(215, 215, 215); */
     border-radius: 30px;
     padding: 0 15px;
