--- a/public/ProjectPage/index.css
+++ b/public/ProjectPage/index.css
@@ -53,7 +53,7 @@ nav div{
 }
 
 .task{
-    margin: 10px 10px;
+    margin: 5px 10px;
     height: 30px;
     font-size: 25px;
     display: flex;
@@ -72,7 +72,7 @@ h4{
     justify-content: space-between;
 }
 
-.finish-btn{
+.finish-btn, .assign-btn{
     margin: 10px 10px 0 0;
     height: 30px;
 }
