--- a/public/ProjectPage/index.css
+++ b/public/ProjectPage/index.css
@@ -1,4 +1,4 @@
-nav{
+nav {
     display: flex;
     justify-content: end;
     max-width: 90vw;
@@ -6,55 +6,55 @@ nav{
     align-items: center;
 }
 
-nav div{
+nav div {
     margin-right: 10px;
 }
 
-.container{
+.container {
     margin-top: 30px;
     display: flex;
     padding: 20px;
-    height:600px;
+    height: 600px;
     justify-content: center;
     z-index: 0;
 }
 
-.jira{
+.jira {
     height: 500px;
     display: flex;
     margin-top: 20px;
     z-index: 0;
 }
 
-.to-do-list{
-    height:80%;
+.to-do-list {
+    height: 80%;
     width: 20%;
     margin: 10px 20px;
 }
 
-.ongoing{
-    height:80%;
+.ongoing {
+    height: 80%;
     width: 20%;
     margin: 10px 20px;
 }
 
-.finished{
-    height:80%;
+.finished {
+    height: 80%;
     width: 20%;
     margin: 10px 20px;
 }
 
 
-.border{
+.border {
     border: 1px solid black;
     border-radius: 5px;
 }
 
-.task-list{
+.task-list {
     display: block;
 }
 
-.task{
+.task {
     margin: 5px 10px;
     height: 30px;
     font-size: 25px;
@@ -65,29 +65,35 @@ nav div{
     position: relative;
 }
 
-h4{
+h4 {
     padding-left: 20px;
 }
 
-.task-container{
+.task-container {
     display: flex;
     justify-content: space-between;
 }
 
-.finish-btn, .assign-btn{
+.finish-btn,
+.assign-btn {
     margin: 10px 10px 0 0;
     height: 30px;
 }
 
-.profile-pic{
+.profile-pic {
     position: absolute;
     right: 10px;
     height: 30px;
     border-radius: 50%;
     width: 30px;
 }
-.task-name{
+
+.task-name {
     font-size: 20px;
+}
+
+.gantt_layout_cell {
+    z-index: 0;
 }
 
 
@@ -98,7 +104,22 @@ h4{
 
 
 
+.darken-area {
+    /* position: absolute; */
+    background-color: rgb(0, 0, 0, 0.8);
+    /* opacity: 0.9; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+    z-index: 1;
+}
 
+.darken-area::-webkit-scrollbar {
+    display: none;
+}
 
 .white-word {
     color: rgb(250, 250, 250);
@@ -117,7 +138,7 @@ h4{
     height: 60%;
     width: 55%;
     min-width: 700px;
-    z-index: 1;
+    z-index: 2;
 }
 
 #memberAndMessages {
@@ -188,8 +209,8 @@ h4{
 .member>.username:hover {
     /* transform: scale(1.1); */
     /* filter: brightness(5) saturate(0.8); */
-    filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.5)); 
-  }
+    filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.5));
+}
 
 .member>.image-cropper {
     margin-left: 10px;
@@ -216,7 +237,7 @@ h4{
 .image-cropper:hover {
     /* transform: scale(1.1); */
     filter: brightness(1.2) saturate(0.8);
-  }
+}
 
 @media screen and (max-width: 1350px) {
     #member-area>.list-title {
@@ -254,17 +275,17 @@ h4{
 }
 
 #message-box {
-       /* background-color: rgb(255, 255, 255); */
-       position: relative;
-       /* display: flex; */
-       justify-content: flex-end;
-       height: auto;
-       width: auto;
-       /* padding: 5px 5px 0 5px; */
-       margin-bottom: 10px;
-       /* overflow-y: auto; */
-       overflow-y: auto;
-   
+    /* background-color: rgb(255, 255, 255); */
+    position: relative;
+    /* display: flex; */
+    justify-content: flex-end;
+    height: auto;
+    width: auto;
+    /* padding: 5px 5px 0 5px; */
+    margin-bottom: 10px;
+    /* overflow-y: auto; */
+    overflow-y: auto;
+
 }
 
 #message-box::-webkit-scrollbar {
@@ -448,9 +469,9 @@ h4{
     width: 100px;
     height: 40px;
     opacity: 0.8;
-    z-index: 1;
+    z-index: 2;
 }
 
 #quit-chat:hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
-  }
+}
