--- a/public/ProjectPage/index.css
+++ b/public/ProjectPage/index.css
@@ -105,7 +105,7 @@ h4 {
 
 
 .darken-area {
-    /* position: absolute; */
+    position: relative;
     background-color: rgb(0, 0, 0, 0.8);
     /* opacity: 0.9; */
     position: fixed;
@@ -114,7 +114,7 @@ h4 {
     bottom: 0;
     right: 0;
     overflow: hidden;
-    z-index: 1;
+    z-index: 10000000;
 }
 
 .darken-area::-webkit-scrollbar {
@@ -138,7 +138,7 @@ h4 {
     height: 60%;
     width: 55%;
     min-width: 700px;
-    z-index: 2;
+    z-index: 20000000;
 }
 
 #memberAndMessages {
@@ -153,8 +153,8 @@ h4 {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.row {
-    --bs-gutter-x: 0rem;
+.chatroom-box .row {
+    --bs-gutter-x: 0rem !important;
 }
 
 #member-area {
@@ -400,7 +400,7 @@ h4 {
     filter: brightness(0) saturate(100%) invert(98%) sepia(13%) saturate(475%) hue-rotate(151deg) brightness(90%) contrast(85%);
 }
 
-#texting-box {
+.texting-box {
     display: flex;
     flex-direction: row;
     height: 40px;
@@ -420,11 +420,34 @@ h4 {
     width: 100%;
 }
 
+#sendEditMessage {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    background-color: #2d2d2d;
+    border-radius: 15px;
+    height: 40px;
+    /* padding: 0 15px; */
+    justify-content: space-between;
+    width: 100%;
+}
+
 .text-content {
     width: calc(100% - 85px);
     height: 30px;
     border-radius: 5px;
     /* border: NONE !important; */
+    border: .3px solid #343434;
+    background-color: #3e3e3e;
+    font-size: 15px;
+    margin-left: 15px;
+}
+
+.edit-textContent {
+    width: calc(100% - 85px);
+    height: 30px;
+    border-radius: 5px;
     border: .3px solid #343434;
     background-color: #3e3e3e;
     font-size: 15px;
@@ -452,7 +475,7 @@ h4 {
     color: #8fd1cf;
 }
 
-#quit-chat {
+.quit-chat {
     position: absolute;
     bottom: -60px;
     left: 50%;
@@ -469,9 +492,9 @@ h4 {
     width: 100px;
     height: 40px;
     opacity: 0.8;
-    z-index: 2;
+    z-index: 20000000;
 }
 
-#quit-chat:hover {
+.quit-chat:hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
 }
