--- a/public/chatPage/index.css
+++ b/public/chatPage/index.css
@@ -302,6 +302,18 @@ body {
     width: 100%;
 }
 
+#sendEditMessage {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    background-color: #2d2d2d;
+    border-radius: 15px;
+    height: 40px;
+    justify-content: space-between;
+    width: 100%;
+}
+
 .text-content {
     width: calc(100% - 85px);
     height: 30px;
