--- a/private/projectPage/index.css
+++ b/private/projectPage/index.css
@@ -115,7 +115,7 @@ h4 {
     bottom: 0;
     right: 0;
     overflow: hidden;
-    z-index: 10000000;
+    z-index: 1;
 }
 
 .darken-area::-webkit-scrollbar {
@@ -139,7 +139,7 @@ h4 {
     height: 60%;
     width: 55%;
     min-width: 700px;
-    z-index: 20000000;
+    z-index: 2;
 }
 
 #memberAndMessages {
@@ -235,7 +235,7 @@ h4 {
     width: auto; */
 }
 
-.image-cropper:hover {
+.member>.image-cropper:hover {
     /* transform: scale(1.1); */
     filter: brightness(1.2) saturate(0.8);
 }
@@ -266,11 +266,11 @@ h4 {
 
 
 #message-list {
-    /* background-color: rgb(127, 197, 255); */
     padding: 0 !important;
     margin: 15px 15px 15px 0;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     width: 75%;
     height: auto;
 }
@@ -493,9 +493,71 @@ h4 {
     width: 100px;
     height: 40px;
     opacity: 0.8;
-    z-index: 20000000;
+    z-index: 2;
 }
 
 .quit-chat:hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
+}
+
+.outer-user-card {
+    display: none;
+    position: relative;
+    background-color: rgb(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+    z-index: 9;
+}
+
+.user-card {
+    display: none;
+    background-color: #f0f0f0;
+    /* display: flex; */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    padding: 15px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 400px;
+    width: 400px;
+    z-index: 10;
+    border-radius: 30px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    
+}
+
+.user-card>.image-cropper {
+    margin-left: 10px;
+    height: 250px;
+    width: 250px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    
+}
+
+.user-card>.image-cropper>img {
+    min-height: 250px;
+    min-width: 250px;
+    object-fit: cover;
+    display: inline;
+    margin: auto;
+    height: auto;
+    width: 100%;
+    cursor: none;
+    /* height: 100%;
+    width: auto; */
+}
+
+.user-card .username {
+    margin: 10px 0;
+    font-size: 25px;
+    font-weight: 600;
 }
