--- a/private/projectPage/index.css
+++ b/private/projectPage/index.css
@@ -499,3 +499,22 @@ h4 {
 .quit-chat:hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
 }
+
+.image-cropper {
+    min-height: 10px;
+    min-width: 10px;
+    object-fit: cover;
+    display: inline;
+    margin: auto;
+    height: auto;
+    width: 100%;
+    cursor: pointer;
+    margin-bottom: 15px;
+    /* height: 100%;
+    width: auto; */
+}
+
+#user-profile {
+    height: 100%;
+    width: 30px
+}
