--- a/private/projectPage/index.css
+++ b/private/projectPage/index.css
@@ -561,3 +561,23 @@ h4 {
     font-size: 25px;
     font-weight: 600;
 }
+
+
+
+
+
+
+.search-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
+}
+
+.user-cards {
+    display: grid;
+    grid-template-columns: repeat(autofill, minmax(150px, 1fr));
+}
+
+.card {
+    border: 1px solid #404040;
+}
