--- a/private/projectPage/index.css
+++ b/private/projectPage/index.css
@@ -22,11 +22,35 @@ nav div {
 
 
 .teammate-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     height: 95%;
     margin-right: 20px;
     width:250px;
     margin-left: 20px;
 }
+
+.team-member-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.all-team-member {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+
+
 
 .right-side{
     height: 95%;
@@ -600,7 +624,7 @@ h4 {
     height: 600px;
     width: 400px;
     display: flex;
-    /* display: none; */
+    display: none;
     flex-direction: column;
     padding: 15px;
     z-index: 8;
