--- a/private/projectPage/index.css
+++ b/private/projectPage/index.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #c8d7d6 !important;
+}
+
 .main {
     display: flex;
     width: 95vw;
@@ -26,7 +30,7 @@ nav div {
     height: calc(95% - 50px);
 }
 
-.teammate-container{
+.teammate-container {
     height: 95%;
     margin-right: 20px;
     width: 250px;
@@ -46,24 +50,26 @@ nav div {
     min-width: 200px;
     max-width: 200px;
     height: 100%;
-    background-color: rgb(255, 255, 255, 0.85);
-    border: .5px solid rgb(215, 215, 215);
-    border-radius: 30px;
-    padding: 15px 0;
+    background-color: #b8d3d2;
+    border-radius: 15px;
+    padding: 15px;
     overflow: hidden;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 
 }
 
 .all-team-member {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 100%;
+    position: relative;
+    height: auto;
+    /* display: flex;
+    flex-direction: column; */
+    /* justify-content: flex-start; */
+    width: auto;
+    overflow-y: auto;
 }
 
-
-
+.all-team-member::-webkit-scrollbar {
+    display: none;
+}
 
 .right-side {
     height: 98%;
@@ -130,7 +136,7 @@ nav div {
     position: relative;
 }
 
-.finished .task{
+.finished .task {
     width: 90%;
 }
 
@@ -144,7 +150,7 @@ h4 {
     align-items: center;
 }
 
-.btn-container{
+.btn-container {
     display: flex;
     justify-content: end;
 }
@@ -177,7 +183,7 @@ h4 {
 }
 
 
-.hide{
+.hide {
     display: none !important;
 }
 
@@ -727,6 +733,15 @@ h4 {
     width: auto; */
 }
 
+.team-member {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
 .team-member>.image-cropper {
     margin-left: 10px;
     height: 40px;
@@ -789,3 +804,16 @@ h4 {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.team-member-list .list-title {
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+    margin: 10px 0;
+    font-weight: 600;
+
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
