--- a/private/projectPage/index.css
+++ b/private/projectPage/index.css
@@ -4,9 +4,10 @@ body {
 
 .main {
     display: flex;
-    width: 95vw;
-    height: 90vh;
-    margin: 20px 50px;
+    /* width: 95vw;
+    height: 90vh; */
+    width: 100%;
+    height: 100%;
     flex-direction: column;
     align-items: center;
 }
@@ -46,7 +47,7 @@ nav div {
 .team-member-list {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     min-width: 200px;
     max-width: 200px;
     height: 100%;
