--- a/private/projectPage/index.css
+++ b/private/projectPage/index.css
@@ -2,7 +2,12 @@ body {
     background-color: #c8d7d6 !important;
 }
 
-.main {
+.row {
+    --bs-gutter-x: 0 !important;
+}
+
+
+.chart-and-status {
     display: flex;
     /* width: 95vw;
     height: 90vh; */
@@ -10,6 +15,7 @@ body {
     height: 100%;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 0 !important;
 }
 
 nav {
@@ -48,6 +54,7 @@ nav div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-right: 15px;
     min-width: 200px;
     max-width: 200px;
     height: 100%;
@@ -55,7 +62,6 @@ nav div {
     border-radius: 15px;
     padding: 15px;
     overflow: hidden;
-
 }
 
 .all-team-member {
@@ -73,9 +79,11 @@ nav div {
 }
 
 .right-side {
-    height: 98%;
-    padding: 30px;
-    width: calc(98% - 250px);
+    background-color: #a6c2c1;
+    /* border-radius: 15px; */
+    /* padding: 15px; */
+    height: 100%;
+    width: 100%;
 }
 
 
@@ -83,44 +91,70 @@ nav div {
     height: 60%;
 }
 
-.task-list-container {
-    height: 37%;
-    margin-top: 30px;
-
-}
-
 .jira {
-    height: 90%;
+    height: 100%;
+    width: 100%;
     display: flex;
+    flex-direction: row;
+    /* align-items: center; */
+    justify-content: space-around;
     z-index: 0;
-    width: 97%;
-    margin: auto;
-    align-items: center;
+    gap: 15px;
 }
 
-.to-do-list {
-    height: 90%;
-    width: 33%;
-    margin: 10px 20px;
-}
-
-.ongoing {
-    height: 90%;
-    width: 33%;
-    margin: 10px 20px;
-}
-
+.to-do-list,
+.ongoing,
 .finished {
-    height: 90%;
-    width: 33%;
-    margin: 10px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    font-size: 20px;
+    font-weight: 600;
 }
 
+.inside-jira-title {
+    display: flex;
+    justify-content: center;
+    width: calc(100% - 30px);
+    /* margin: 0 15px; */
+    /* padding: 0 15px; */
+    border-bottom: 1.5px solid #ffffff;
+    margin-bottom: 5px;
+}
 
-.border {
+.inside-jira-task-box-to-do-list,
+.inside-jira-task-box-ongoing,
+.inside-jira-task-box-finished {
+    overflow-y: auto;
+    margin-bottom: 5px;
+    padding: 0 15px;
+    width: 100%;
+}
+
+.inside-jira-task {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 15px;
+    font-weight: 400;
+    margin-bottom: 5px;
+}
+
+.inside-jira-task-box-to-do-list::-webkit-scrollbar,
+.inside-jira-task-box-ongoing::-webkit-scrollbar,
+.inside-jira-task-box-finished::-webkit-scrollbar,
+.inside-jira-task-box::-webkit-scrollbar {
+    display: none;
+}
+
+/* .border {
     border: 1px solid black;
     border-radius: 5px;
-}
+} */
 
 .task-list {
     display: block;
@@ -149,12 +183,14 @@ h4 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 15px;
+    height: 40%;
 }
 
-.btn-container {
+/* .btn-container {
     display: flex;
     justify-content: end;
-}
+} */
 
 .finish-btn,
 .assign-btn {
@@ -173,10 +209,6 @@ h4 {
     height: 30px;
     border-radius: 50%;
     width: 30px;
-}
-
-.task-name {
-    font-size: 20px;
 }
 
 .gantt_layout_cell {
@@ -810,11 +842,10 @@ h4 {
     display: flex;
     justify-content: center;
     font-size: 25px;
-    margin: 10px 0;
+    margin-bottom: 10px;
     font-weight: 600;
 
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
-
