--- a/private/projectPage/index.css
+++ b/private/projectPage/index.css
@@ -849,3 +849,33 @@ h4 {
     -ms-user-select: none;
     user-select: none;
 }
+
+.task-name {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.task-name .image-cropper {
+    height: 25px;
+    width: 25px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.image-cropper>img {
+    min-height: 25px;
+    min-width: 25px;
+    object-fit: cover;
+    display: inline;
+    margin: auto;
+    height: auto;
+    width: 100%;
+    cursor: pointer;
+    /* height: 100%;
+    width: auto; */
+}
