--- a/private/projectPage/index.css
+++ b/private/projectPage/index.css
@@ -79,7 +79,6 @@ nav div {
 }
 
 .right-side {
-    background-color: #a6c2c1;
     /* border-radius: 15px; */
     /* padding: 15px; */
     height: 100%;
@@ -92,14 +91,17 @@ nav div {
 }
 
 .jira {
+    background-color: #a6c2c1;
+    border-radius: 15px;
     height: 100%;
     width: 100%;
+    padding: 15px 0;
     display: flex;
     flex-direction: row;
     /* align-items: center; */
     justify-content: space-around;
     z-index: 0;
-    gap: 15px;
+    /* gap: 15px; */
 }
 
 .to-do-list,
@@ -114,6 +116,11 @@ nav div {
     font-weight: 600;
 }
 
+.to-do-list,
+.ongoing {
+    border-right: 1px solid #343434;
+}
+
 .inside-jira-title {
     display: flex;
     justify-content: center;
@@ -121,6 +128,7 @@ nav div {
     /* margin: 0 15px; */
     /* padding: 0 15px; */
     border-bottom: 1.5px solid #ffffff;
+    /* border-bottom: 1.5px solid #6a8483; */
     margin-bottom: 5px;
 }
 
@@ -181,9 +189,10 @@ h4 {
 
 .task-container {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    padding-top: 15px;
     align-items: center;
-    padding: 15px;
+    width: 100%;
     height: 40%;
 }
 
@@ -693,7 +702,6 @@ h4 {
     transform: translate(-50%, -50%);
     height: 600px;
     width: 400px;
-    display: flex;
     display: none;
     flex-direction: column;
     padding: 15px;
@@ -838,6 +846,14 @@ h4 {
     transform: translate(-50%, -50%);
 }
 
+.team-member-username {
+    cursor: pointer;
+    
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .team-member-list .list-title {
     display: flex;
     justify-content: center;
@@ -867,7 +883,7 @@ h4 {
     margin-right: 5px;
 }
 
-.image-cropper>img {
+.task-name>.image-cropper>img {
     min-height: 25px;
     min-width: 25px;
     object-fit: cover;
@@ -878,4 +894,35 @@ h4 {
     cursor: pointer;
     /* height: 100%;
     width: auto; */
+}
+
+.task-name>.image-cropper>svg {
+    min-height: 25px;
+    min-width: 25px;
+    object-fit: cover;
+    /* display: inline; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    height: auto;
+    width: 100%;
+    cursor: pointer;
+    /* height: 100%;
+    width: auto; */
+}
+
+.member-button-list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.member-list-button {
+    background-color: #779b9a;
+    border: none;
+    height: 40px;
+    border-radius: 5px;
+    margin-top: 5px;
+    width: 100%;
 }
