--- a/private/mainPage/index.css
+++ b/private/mainPage/index.css
@@ -5,9 +5,12 @@ body {
     font-style: normal;
 }
 
-
 .white-word {
     color: rgb(250, 250, 250);
+}
+
+.text-center {
+    text-align: center;
 }
 
 .row {
@@ -23,7 +26,6 @@ body {
 }
 
 #main-page-area {
-
     display: flex;
     flex-direction: column;
     height: 85%;
@@ -33,12 +35,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
 }
-
-
-
-
 
 #top-bar {
     min-height: 50px;
@@ -55,10 +52,6 @@ body {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-
-
-
-
 .user-project-area {
     display: flex;
     flex-direction: row;
@@ -67,25 +60,52 @@ body {
     background-color: rgb(255, 255, 255, 0.85);
     border: .5px solid rgb(215, 215, 215);
     border-radius: 30px;
-    padding: 15px 0;
+    padding: 15px;
     overflow: hidden;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-
-
-
-
 .personal-area {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     border-right: 1px solid rgb(124, 124, 124);
-    /* border-radius: 15px; */
     padding: 0 15px;
     justify-content: space-between;
     max-height: auto;
     min-width: 250px;
-    max-width: 250px;
+    max-width: 250px; */
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: 15px;
+    min-width: 200px;
+    max-width: 200px;
+    height: 100%;
+    background-color: #b8d3d2;
+    border-radius: 15px;
+    padding: 15px;
+    overflow: hidden;
+
+}
+
+.task-status {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 12px;
+    border-radius: 15px;
+}
+
+.normal {
+    background-color: greenyellow;
+}
+
+.priority {
+    background-color: #e7cd77;
+}
+
+.overrun {
+    background-color: #b4454c;
 }
 
 .personal-area img {
@@ -100,16 +120,16 @@ body {
 
 .user-content .image-cropper {
     margin-left: 10px;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     position: relative;
     overflow: hidden;
     border-radius: 50%;
 }
 
 .image-cropper>img{
-    min-height: 200px;
-    min-width: 200px;
+    min-height: 150px;
+    min-width: 150px;
     object-fit: cover;
     display: inline;
     margin: auto;
@@ -122,8 +142,8 @@ body {
 }
 
 .image-cropper>svg{
-    min-height: 200px;
-    min-width: 200px;
+    min-height: 150px;
+    min-width: 150px;
     object-fit: cover;
     display: inline;
     margin: auto;
@@ -156,10 +176,6 @@ body {
     -ms-user-select: none;
     user-select: none;
 }
-
-
-
-
 
 .create-project {
     box-sizing: content-box;
@@ -235,11 +251,6 @@ body {
     z-index: 99;
 }
 
-
-
-
-
-
 .completed-project-area {
     display: flex;
     flex-direction: column;
@@ -268,80 +279,17 @@ body {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
   }
 
-/* nav{
-    display: flex;
-    justify-content: end;
-    max-width: 90vw;
-    border: 1px solid black;
-    height: 50px;
-    align-items: center;
-    border-radius: 5px;
-}
-
-nav div{
-    margin-right: 10px;
-}
-
-.container{
-    display: flex;
-    margin-top: 20px;
-}
-
-.personal-area {
+.user-content-button-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 30vw;
-    max-width: 200px;
-    height: 500px;
-    margin-right: 20px;
-    border: 1px solid black;
-    border-radius: 5px;
-}
-#user-profile{
-    overflow: hidden;
-    max-width: 100%;
-    object-fit: cover;
-    max-width: 100%;
-    object-position: center;
+    width: 100%;
 }
 
-.project-area{
-    width: 80vw;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 500px;
-    border: 1px solid black;
+.edit-profile, .update-password{
+    background-color: #779b9a;
+    border: none;
+    height: 40px;
     border-radius: 5px;
+    margin-top: 5px;
+    width: 100%;
 }
-.project{
-    margin-right: 10px;
-    border: 1px solid black;
-    border-radius: 5px;
-    height: 90%;
-    width: 150px;
-    text-align: center;
-    padding-top: 50px;
-    box-sizing: border-box;
-    cursor: pointer;
-
-}
-
-#new-project{
-    height: 90%;
-    border: 1px solid black;
-    border-radius: 5px;
-}
-.completed-project-area{
-    margin-top: 20px;
-    display: flex;
-    border: 1px solid black;
-    border-radius: 5px;
-}
-
-.completed-project{
-    padding: 10px;
-    height: 500px;
-} */
